# merchant/docs/swagger.json
@@ -303,7 +303,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "merchants"
+                    "Merchants"
                 ],
                 "summary": "CreateMerchant",
                 "parameters": [
@@ -313,7 +313,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_VuThanhThien_golang-gorm-postgres_merchant_internal_models_dto.CreateMerchantDTO"
+                            "$ref": "#/definitions/github_com_VuThanhThien_golang-gorm-postgres_merchant_internal_models_dto.CreateMerchantInput"
                         }
                     }
                 ],
@@ -502,6 +502,68 @@
             }
         },
         "/products": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "FilterProductsWithPagination",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Products"
+                ],
+                "summary": "FilterProductsWithPagination",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "name": "category_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "number",
+                        "name": "max_price",
+                        "in": "query"
+                    },
+                    {
+                        "type": "number",
+                        "name": "min_price",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "example": 5,
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "example": 1,
+                        "name": "page",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -516,7 +578,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "products"
+                    "Products"
                 ],
                 "summary": "CreateProduct",
                 "parameters": [
@@ -540,7 +602,7 @@
                 }
             }
         },
-        "/products/product-id/{product_id}": {
+        "/products/{id}": {
             "get": {
                 "security": [
                     {
@@ -555,14 +617,14 @@
                     "application/json"
                 ],
                 "tags": [
-                    "products"
+                    "Products"
                 ],
                 "summary": "GetProductByProductID",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "product_id",
-                        "name": "product_id",
+                        "description": "id",
+                        "name": "id",
                         "in": "path"
                     }
                 ],
@@ -574,9 +636,7 @@
                         }
                     }
                 }
-            }
-        },
-        "/products/{id}": {
+            },
             "delete": {
                 "security": [
                     {
@@ -591,7 +651,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "products"
+                    "Products"
                 ],
                 "summary": "DeleteProduct",
                 "parameters": [
@@ -646,36 +706,7 @@
                 }
             }
         },
-        "/variants/{id}": {
-            "delete": {
-                "description": "Delete a variant by its ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Variants"
-                ],
-                "summary": "Delete a variant by ID",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Variant ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "No Content"
-                    }
-                }
-            }
-        },
-        "/variants/{productID}": {
+        "/variants/product-id/{id}": {
             "get": {
                 "description": "Get a variant by its product ID",
                 "consumes": [
@@ -692,7 +723,7 @@
                     {
                         "type": "string",
                         "description": "Product ID",
-                        "name": "productID",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -707,7 +738,7 @@
                 }
             }
         },
-        "/variants/{variantName}": {
+        "/variants/variant-name/{variantName}": {
             "get": {
                 "description": "Get a variant by its variant name",
                 "consumes": [
@@ -738,6 +769,65 @@
                     }
                 }
             }
+        },
+        "/variants/{id}": {
+            "get": {
+                "description": "Get a variant by its ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Variants"
+                ],
+                "summary": "Get a variant by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Variant ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_VuThanhThien_golang-gorm-postgres_merchant_internal_models_dto.VariantDTO"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete a variant by its ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Variants"
+                ],
+                "summary": "Delete a variant by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Variant ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -749,9 +839,6 @@
             "properties": {
                 "description": {
                     "type": "string"
-                },
-                "id": {
-                    "type": "integer"
                 },
                 "name": {
                     "type": "string"
@@ -792,12 +879,11 @@
                 }
             }
         },
-        "github_com_VuThanhThien_golang-gorm-postgres_merchant_internal_models_dto.CreateMerchantDTO": {
+        "github_com_VuThanhThien_golang-gorm-postgres_merchant_internal_models_dto.CreateMerchantInput": {
             "type": "object",
             "required": [
                 "merchant_id",
-                "name",
-                "user_id"
+                "name"
             ],
             "properties": {
                 "description": {
@@ -808,9 +894,6 @@
                 },
                 "name": {
                     "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
                 }
             }
         },
